Additional code review feedback addressed.